tests/semantics/invalid/bad_id_usage.s23
int a = 0;
int b[10];
int c();

code a {
    a[0] = 0;
    print a(1);
}

code b {
    b = 0;
    b = 0;
    print b(1);
}

code c {
    c = 0;
    c[0] = 0;
}

code d {
    d = 0;
    d[0] = 0;
    print d(1);
}